External CSS File deleted, Internal CSS added

--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <title>Zerodha - Dummy Landing Page</title>
-</head>
-<body>
-    <div style="display: flex; justify-content: space-around; margin-top: 30px;">
-        <div style="display: flex; justify-content: center;">
-            <img src="logo.svg" alt="zerodha-official-logo" width="200">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+        <title>Zerodha - Dummy Landing Page</title>
+    </head>
+    <body>
+        <div style="display: flex; justify-content: space-around; margin-top: 30px; box-shadow: 0px 2px 0px rgb(247, 245, 245);">
+            <div style="display: flex; justify-content: center; padding: 20px;">
+                <img src="logo.svg" alt="zerodha-official-logo" width="180">
+            </div>
+            <div style="display: flex; font-family: 'Inter', sans-serif; font-weight: 400; font-size: 14px; color: #444444;">
+                <div style="margin-left: 5px; margin-right: 5px; padding: 20px; cursor: pointer;" onmouseover="this.style.color='#387ED1'" onmouseout="this.style.color='#444444'">SignUp</div>
+                <div style="margin-left: 5px; margin-right: 5px; padding: 20px; cursor: pointer;" onmouseover="this.style.color='#387ED1'" onmouseout="this.style.color='#444444'">Abouts</div>
+                <div style="margin-left: 5px; margin-right: 5px; padding: 20px; cursor: pointer;" onmouseover="this.style.color='#387ED1'" onmouseout="this.style.color='#444444'">Products</div>
+                <div style="margin-left: 5px; margin-right: 5px; padding: 20px; cursor: pointer;" onmouseover="this.style.color='#387ED1'" onmouseout="this.style.color='#444444'">Pricing</div>
+                <div style="margin-left: 5px; margin-right: 5px; padding: 20px; cursor: pointer;" onmouseover="this.style.color='#387ED1'" onmouseout="this.style.color='#444444'">Support</div>
+            </div>
         </div>
-        <div style="display: flex;">
-            <div style="margin-left: 5px; margin-right: 5px;">SignUp</div>
-            <div style="margin-left: 5px; margin-right: 5px;">Abouts</div>
-            <div style="margin-left: 5px; margin-right: 5px;">Products</div>
-            <div style="margin-left: 5px; margin-right: 5px;">Pricing</div>
-            <div style="margin-left: 5px; margin-right: 5px;">Support</div>
+        <div style="display: flex; justify-content: center; margin: 50px;">
+            <img src="landingImage.png" alt="zerodha-landing-page-image" width="750" height="350">
         </div>
-    </div>
-    <hr>
-    <div style="display: flex; justify-content: center;">
-        <img src="landingImage.png" alt="zerodha-landing-page-image" width="1000" height="500">
-    </div>
-    <div>
-        <center>
-            <h1 style="font-family: 'Poppins', sans-serif;">Invest in everything</h1>
-            <h2 style="font-family: 'Inter', sans-serif;">Online platform to invest in stocks, derivatives, mutual funds, and more</h2>
-        </center>
-    </div>
-    <div style="display: flex; justify-content: center;">
-        <button style="background-color: #387ED1; color: white; width: 170px; height: 40px;font-size: 20px; border-radius: 2px; border: 1px none black; font-family: 'Poppins', sans-serif;">Sign up now</button>
-    </div>
-</body>
+        <div">
+            <div style="font-family: 'Inter', sans-serif; font-weight: 500; font-size: 44px; display: flex; justify-content: center; color: #424242; margin: 20px;">Invest in everything</div>
+            <div style="font-family: 'Inter', sans-serif; font-weight: 400; font-size: 20px; display: flex; justify-content: center; color: #424242; margin: 20px;">Online platform to invest in stocks, derivatives, mutual funds, and more</div>
+        </div>
+        <div style="display: flex; justify-content: center; padding: 20px">
+            <button style="background-color: #387ED1; color: white; width: 170px; height: 40px;font-size: 20px; border-radius: 2px; border: 1px none black; font-family: 'Inter', sans-serif; font-weight: 400; cursor: pointer;" onmouseover="this.style.backgroundColor='black'" onmouseout="this.style.backgroundColor='#387ED1'">Sign up now</button>
+        </div>
+    </body>
 </html>
